--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,14 @@ body {
   font-family: sans-serif;
 }
 
+main {
+  margin: 0 auto 0 auto;
+  width: 400px;
+  height: 500px;
+}
+
 .row {
+  margin: 0 50px 0 auto;
   height: 100px;
 }
 
@@ -12,6 +19,11 @@ body {
   height: 100px;
   display: inline-block;
   position: relative;
+  /*box-shadow: 3px 2px 1px black;*/
+}
+
+.title {
+  text-align: center;
 }
 
 .win-msg {
@@ -19,17 +31,17 @@ body {
   font-size: 50px;
   font-weight: bold;
 }
-/*.X {
-  background-color: yellow;
-}
 
-.O {
-  background-color: red;
-}*/
+.win {
+  background-color: #32CD32;
+}
 
 .letter {
-  font-size: 100px;
+  font-size: 80px;
 }
 span {
+  text-align: center;
+  width: inherit;
+  height: inherit;
   position: absolute;
 }
