--- a/src/App.css
+++ b/src/App.css
@@ -34,11 +34,25 @@ main {
   text-align: center;
 }
 
+.align {
+  text-align: center;
+}
+
 .win-msg {
   text-align: center;
   color: green;
   font-size: 50px;
   font-weight: bold;
+}
+
+.btn {
+  border: none;
+  background: blue;
+  color: white;
+  padding: 20px;
+  font-size: 20px;
+  margin-bottom: 0;
+  border-radius: 10px;
 }
 
 .win {
