--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ main {
   height: 100px;
   display: inline-block;
   position: relative;
+  cursor: pointer;
   /*box-shadow: 3px 2px 1px black;*/
 }
 
@@ -53,6 +54,7 @@ main {
   font-size: 20px;
   margin-bottom: 0;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .win {
